data/derived/comb/progs/unify/prog7752.ml.out
Characters 42-50:
  let rec digitsOfInt n = digitsOfIntHelper (n > 10);;
                                            ^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
